# copilot-interactive

./: .env.example  .gitignore  README.md  pyproject.toml
src/copilot_interactive/: __init__.py  main.py
src/copilot_interactive/config/: __init__.py  settings.py
src/copilot_interactive/models/: __init__.py  requests.py  responses.py
src/copilot_interactive/routers/: __init__.py  health.py  user_input.py
src/copilot_interactive/services/: __init__.py  assistant_service.py  input_service.py  notification_service.py
src/copilot_interactive/utils/: __init__.py  platform.py  text.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py  test_settings.py  test_utils.py
